Fixes CSS gaps

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -23,12 +23,28 @@ main {
 .photos {
     line-height: 0;
 
-    -webkit-column-count: 6;
+    -webkit-column-count: 8;
     -webkit-column-gap:   0;
-    -moz-column-count:    6;
+    -moz-column-count:    8;
     -moz-column-gap:      0;
-    column-count:         6;
+    column-count:         8;
     column-gap:           0;
+}
+
+@media (max-width: 1800px) {
+    .photos {
+        -moz-column-count:    7;
+        -webkit-column-count: 7;
+        column-count:         7;
+    }
+}
+
+@media (max-width: 1600px) {
+    .photos {
+        -moz-column-count:    6;
+        -webkit-column-count: 6;
+        column-count:         6;
+    }
 }
 
 @media (max-width: 1400px) {
